jvm 脚本